JSON: implemented support for floating point numbers